--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar{
+  width: 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body::-webkit-scrollbar-thumb{
+  background-color: #ef4444
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+  font-family: "kanit";
 }
-
-.App-link {
-  color: #61dafb;
+.active {
+  color: #398296;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active::after{
+  display: none;
+}
+nav a {
+  transition: 0.3s;
+  font-size: 18px;
+  position: relative;
+}
+nav a::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 1px;
+  width: 0;
+  transition: 0.3s;
+  background-color: #9acbd7;
+}
+nav a:hover::after {
+  transition: 0.3s;
+  left: 0;
+  width: 100%;
+}
+nav a:not(.active):hover {
+  transition: 0.3s;
+  color: #9acbd7;
+}
+ul li{
+  cursor: pointer;
+}
+.no-scroll::-webkit-scrollbar{
+  width: 0px;
+}
+.dragging {
+  scroll-behavior: smooth;
 }
